# axum-mcp

./: .editorconfig  .gitignore  Cargo.toml
src/: constant.rs  lib.rs  main.rs  protocol.rs  result.rs  routing.rs  server.rs  tool.rs
src/handler/: health.rs  mcp.rs  mod.rs
src/tools/: add.rs  echo.rs  mod.rs
