[package]
name        = "axum-mcp"
version     = "0.1.0"
edition     = "2024"
description = "MCP server built with Axum"
license     = "Apache-2.0"

[[bin]]
name = "axum-mcp"
path = "src/main.rs"

[lib]
name = "axum_mcp"
path = "src/lib.rs"

[dependencies]
axum                = "0.8"
tokio               = { version = "1", features = ["full"]   }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
async-trait         = "0.1"
tracing             = "0.1"
tracing-subscriber  = "0.3"
